--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
     <string name="sign_out">Sign out</string>
     <string name="save_changes">Save changes</string>
     <string name="set_time">%1$s,%2$s</string>
+    <string name="date">Date</string>
+    <string name="set_date">%1$s</string>
 </resources>
